--- a/lab/Lab6.Rmd
+++ b/lab/Lab6.Rmd
@@ -20,8 +20,13 @@ knitr::opts_chunk$set(include = TRUE, message = FALSE, warning = FALSE)
 library(here)
 library(tidyverse)
 library(tidymodels)
+library(vip)
 ```
 
+```{r}
+# set seed for reproducibility
+set.seed(123)
+```
 
 ## Data
 
@@ -32,7 +37,9 @@ https://github.com/MaRo406/eds-232-machine-learning/blob/main/data
 # read in data
 eel_data <- read.csv(here::here("lab", "data", "eel.model.data.csv")) %>%
   janitor::clean_names() %>% 
-  mutate(angaus = as.factor(angaus)) %>% 
+  mutate(angaus = as.factor(angaus),
+         ds_dam = as.factor(ds_dam),
+         method = as.factor(method)) %>% 
   select(-site)
 ```
 
@@ -41,10 +48,8 @@ eel_data <- read.csv(here::here("lab", "data", "eel.model.data.csv")) %>%
 
 Split the model data (eel.model.data.csv) into a training and test set, stratified by outcome score (Angaus). Use 10-fold CV to resample the training set.
 
-```{r}
-# set seed for reproducibility
-set.seed(123)
 
+```{r}
 # initial split of data (default 70/30)
 eel_split <- initial_split(eel_data, strata = angaus, prop = 0.7)
 eel_test <- testing(eel_split)
@@ -61,6 +66,11 @@ cv_folds <- eel_train %>% vfold_cv(v = 10)
 ### Preprocess
 
 Create a recipe to prepare your data for the XGBoost model
+
+```{r}
+str(eel_train)
+```
+
 
 ```{r}
 # specify recipe for model preprocessing
@@ -301,36 +311,41 @@ specificity(test_predict, truth = angaus, estimate = .pred_class)
 ```
 
 
-[When applied to the testing data, the accuracy of the model was 78%. However, the model made a lot of type I (false-negative) errors (i.e., when there were eels at the site, the model only correctly predicted that this was the case about 43% of the time)]{style="color:navy;"}
+[When applied to the testing data, the accuracy of the model was 78%. However, the model made a lot of type I (false-negative) errors, with a specificity of only 43%. This means that when there were in fact eels at the site, the model only correctly predicted that this was the case about 43% of the time. Meanwhile, the sensitivity of the model is high at 90% (i.e., when there were no eels at the site, the model correctly predicted that this was the case 90% of the time).]{style="color:navy;"}
 
 ## Fit your model the evaluation data and compare performance
+
+```{r}
+# load evaluation data
+eval_data <- read.csv(here::here("lab", "data", "eel.eval.data.csv")) %>%
+  janitor::clean_names() %>%
+  mutate(angaus = as.factor(angaus),
+         ds_dam = as.factor(ds_dam),
+         method = as.factor(method)) %>% 
+  select(-angaus_obs, angaus, everything())
+
+# fit final model to training data
+final_fit <- fit(
+  final_xgboost_model,
+  formula = angaus ~ .,
+  data = eval_data
+)
+```
+
 
 1.  Now used your final model to predict on the other dataset (eval.data.csv)
 
 ```{r}
-# load evaluation data
-eel_eval_data <- read.csv(here::here("lab", "data", "eel.eval.data.csv")) %>%
-  janitor::clean_names() %>%
-  mutate(angaus = as.factor(angaus_obs)) %>% 
-  select(-angaus_obs)
 
-# preprocess evaluation data using same recipe
-baked_eval <- bake(eel_recipe, eel_eval_data)
-
-```
-
-```{r}
 # predict evaluation data
-eval_predict <- predict(final_fit, baked_eval) %>% 
-    bind_cols(eel_test) # bind predictions column to testing data
+eval_predict <- predict(final_fit, eval_data) %>% 
+  bind_cols(eval_data) # bind predictions column to testing data
 
 # create confusion matrix
 conf_mat(data = eval_predict, truth = angaus, estimate = .pred_class) %>% 
   autoplot(type = "heatmap")
 
 ```
-
-
 
 2.  How does your model perform on this data?
 
@@ -341,8 +356,20 @@ sensitivity(eval_predict, truth = angaus, estimate = .pred_class)
 specificity(eval_predict, truth = angaus, estimate = .pred_class)
 ```
 
+[When applied to the evaluation data, the accuracy of the model was 80%, which is slightly better than when the model was applied to the testing data. However, the specificity of the model decreases substantially to only 17% (i.e., when there were eels at the site, the model correctly predicted that this was the case 17% of the time), meaning that the model is committing even more type I errors than it was before. Meanwhile, the sensitivity of the model is extremely high at 98% (i.e., when there were no eels at the site, the model correctly predicted that this was the case 98% of the time).]{style="color:navy;"}
+
 
 3.  How do your results compare to those of Elith et al.?
 
 -   Use {vip} to compare variable importance
+
+```{r}
+# compare importance of different predictor variables
+vip(final_fit, method = "model")
+```
+
+[My results are similar to Elith et al in that summer air temperature (seg_sum_t) was the most important predictor variable, with a relative contribution that is above 20%. In addition, for both of us, the second most important predictor variable was the proportion of area with indigenous forest (us_native), though its relative contribution percentage is more than double in my analysis. Meanwhile, one of the most significant differences is the relative contribution of maximum downstream slope (ds_max_slope) in my analysis, which is well ahead of both distance to coast (ds_dist) and the weighted average of proportional cover of bed sediment (loc_sed). For Elith et al, both of these variables were more important than maximum downstream slope. Lastly, another significant difference was the extremely low (basically zero) contribution of days per month with rain greater than 25 mm (us_rain_days) in my analysis, compared to a contribution of 6.5% in Elith et al's analysis. In Elith et al's analysis, train days were more important predictors than average temperature in catchment compared with segment (us_avg_t) and winter air temperature (seg_t_seas), while this was not the case in my analysis.]{style="color:navy;"}
+
 -   What do your variable importance results tell you about the distribution of this eel species?
+
+My variable importance results say that summer air temperature, proportion of area with indigenous forest, maximum downstream slope, and distance to coast are the most important predictors of eel species distribution. In addition, my results say that days per month with rain greater than 25 mm, winter air temperature, 
